--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="grid-container">
-        <nav>
-            
+        <header>
+            <img class="logo-top" src="img/logo-large.svg" alt="">
+        </header>
+        <nav class="home-page">
+            <img class="menu" src="img/menu-24px.svg" alt="">
+            <img class="logo" src="img/logo-small.svg" alt="">
+            <a href="#" class="current">Recept</a>
+            <a href="#">Laddad upp</a>
+            <a href="#">Kurser</a>
         </nav>
 
+        <div>dafda</div>
+
     </div>
-    
+
+
 </body>
+
 </html>
