--- a/index.html
+++ b/index.html
@@ -24,7 +24,77 @@
             <a href="#">Kurser</a>
         </nav>
 
-        <div>dafda</div>
+        <main>
+            <section class="recipes">
+                <article class="recipe-card">
+                    <h3>Köttbullar med mos</h3>
+                    <div class="recipe-feedback-container">
+                        <div class="favourite-yes"></div>
+                        <div class="raiting three"></div>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <div class="recipe-minutes">45</div>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
+                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                    </picture>
+                </article>
+
+                <article class="recipe-card">
+                    <h3>Köttbullar med mos</h3>
+                    <div class="recipe-feedback-container">
+                        <div class="favourite-yes"></div>
+                        <div class="raiting three"></div>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <div class="recipe-minutes">45</div>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
+                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                    </picture>
+                </article>
+
+                <article class="recipe-card">
+                    <h3>Köttbullar med mos</h3>
+                    <div class="recipe-feedback-container">
+                        <div class="favourite-yes"></div>
+                        <div class="raiting three"></div>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <div class="recipe-minutes">45</div>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
+                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                    </picture>
+                </article>
+
+                <article class="recipe-card">
+                    <h3>Köttbullar med mos</h3>
+                    <div class="recipe-feedback-container">
+                        <div class="favourite-yes"></div>
+                        <div class="raiting three"></div>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <div class="recipe-minutes">45</div>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
+                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                    </picture>
+                </article>
+
+
+
+            </section>
+        </main>
+
 
     </div>
 
