recipe card mobile 90% done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -27,69 +28,112 @@
         <main>
             <section class="recipes">
                 <article class="recipe-card">
-                    <h3>Köttbullar med mos</h3>
+                    <h3>Köttbullar med spagetti</h3>
                     <div class="recipe-feedback-container">
-                        <div class="favourite-yes"></div>
-                        <div class="raiting three"></div>
+                        <span class="material-icons favourite"></span>
+                        <span class="material-icons raiting four"></span>
                     </div>
                     <div class="recipe-numbers-container">
-                        <div class="recipe-minutes">45</div>
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">20</div>
+                        <span class="material-icons portions"></span>
                         <div class="recipe-portions">4-6</div>
                     </div>
                     <picture>
-                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
-                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                        <img src="https://source.unsplash.com/W10_NCsLVyc/450x250" alt="">
                     </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </article>
 
                 <article class="recipe-card">
-                    <h3>Köttbullar med mos</h3>
+                    <h3>Frukt och bär toast</h3>
                     <div class="recipe-feedback-container">
-                        <div class="favourite-yes"></div>
-                        <div class="raiting three"></div>
+                        <span class="material-icons favourite"></span>
+                        <span class="material-icons raiting three"></span>
                     </div>
                     <div class="recipe-numbers-container">
-                        <div class="recipe-minutes">45</div>
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">35</div>
+                        <span class="material-icons portions"></span>
                         <div class="recipe-portions">4-6</div>
                     </div>
                     <picture>
-                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
-                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                        <img src="https://source.unsplash.com/zcUgjyqEwe8/450x250" alt="">
                     </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </article>
 
                 <article class="recipe-card">
-                    <h3>Köttbullar med mos</h3>
+                    <h3>Saffransoppa med fetaost</h3>
                     <div class="recipe-feedback-container">
-                        <div class="favourite-yes"></div>
-                        <div class="raiting three"></div>
+                        <span class="material-icons non-favourite"></span>
+                        <span class="material-icons raiting two"></span>
                     </div>
                     <div class="recipe-numbers-container">
-                        <div class="recipe-minutes">45</div>
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">40</div>
+                        <span class="material-icons portions"></span>
                         <div class="recipe-portions">4-6</div>
                     </div>
                     <picture>
-                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
-                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                        <img src="https://source.unsplash.com/w6ftFbPCs9I/450x250" alt="">
                     </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </article>
 
                 <article class="recipe-card">
-                    <h3>Köttbullar med mos</h3>
+                    <h3>Pizza cerdo</h3>
                     <div class="recipe-feedback-container">
-                        <div class="favourite-yes"></div>
-                        <div class="raiting three"></div>
+                        <span class="material-icons non-favourite"></span>
+                        <span class="material-icons raiting four"></span>
                     </div>
                     <div class="recipe-numbers-container">
-                        <div class="recipe-minutes">45</div>
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">35</div>
+                        <span class="material-icons portions"></span>
                         <div class="recipe-portions">4-6</div>
                     </div>
                     <picture>
-                        <!-- <source srcset="https://source.unsplash.com/W10_NCsLVyc/700x700">
-                        <img src="img/bilder/image-large.jpg" alt=""> -->
+                        <img src="https://source.unsplash.com/MNtag_eXMKw/450x250" alt="">
                     </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
                 </article>
 
+                <article class="recipe-card">
+                    <h3>Lax på avokadobädd</h3>
+                    <div class="recipe-feedback-container">
+                        <span class="material-icons non-favourite"></span>
+                        <span class="material-icons raiting three"></span>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">30</div>
+                        <span class="material-icons portions"></span>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <img src="https://source.unsplash.com/awj7sRviVXo/450x250" alt="">
+                    </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </article>
+
+                <article class="recipe-card">
+                    <h3>Lime taco</h3>
+                    <div class="recipe-feedback-container">
+                        <span class="material-icons non-favourite"></span>
+                        <span class="material-icons raiting five"></span>
+                    </div>
+                    <div class="recipe-numbers-container">
+                        <span class="material-icons time"></span>
+                        <div class="recipe-minutes">40</div>
+                        <span class="material-icons portions"></span>
+                        <div class="recipe-portions">4-6</div>
+                    </div>
+                    <picture>
+                        <img src="https://source.unsplash.com/vzX2rgUbQXM/450x250" alt="">
+                    </picture>
+                    <p class="recipe-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                </article>
 
 
             </section>
