--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="grid-container">
         <header>
             <img class="logo-top" src="img/logo-large.svg" alt="">
+            <img class="logo-top-medium" src="img/logo-small.svg" alt="">
         </header>
         <nav class="home-page">
             <img class="menu" src="img/menu-24px.svg" alt="">
@@ -30,6 +31,7 @@
                 <article class="recipe-card">
                     <h3>Köttbullar med spagetti</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons favourite"></span>
                         <span class="material-icons raiting four"></span>
                     </div>
@@ -48,6 +50,7 @@
                 <article class="recipe-card">
                     <h3>Frukt och bär toast</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons favourite"></span>
                         <span class="material-icons raiting three"></span>
                     </div>
@@ -66,6 +69,7 @@
                 <article class="recipe-card">
                     <h3>Saffransoppa med fetaost</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons non-favourite"></span>
                         <span class="material-icons raiting two"></span>
                     </div>
@@ -84,6 +88,7 @@
                 <article class="recipe-card">
                     <h3>Pizza cerdo</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons non-favourite"></span>
                         <span class="material-icons raiting four"></span>
                     </div>
@@ -102,6 +107,7 @@
                 <article class="recipe-card">
                     <h3>Lax på avokadobädd</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons non-favourite"></span>
                         <span class="material-icons raiting three"></span>
                     </div>
@@ -120,6 +126,7 @@
                 <article class="recipe-card">
                     <h3>Lime taco</h3>
                     <div class="recipe-feedback-container">
+                        <button class="card-button">LÄS RECEPT</button>
                         <span class="material-icons non-favourite"></span>
                         <span class="material-icons raiting five"></span>
                     </div>
